--- a/Apruve/Apruve/Apruve.csproj
+++ b/Apruve/Apruve/Apruve.csproj
@@ -51,6 +51,7 @@
     <Compile Include="ApruveException.cs" />
     <Compile Include="Models\LineItem.cs" />
     <Compile Include="Models\Payment.cs" />
+    <Compile Include="Models\PaymentItem.cs" />
     <Compile Include="Models\PaymentRequest.cs" />
     <Compile Include="Models\PaymentRequestUpdateResponse.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
